--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -56,3 +56,19 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
+
+person.label= Persona
+person.name.label= Nombre
+person.firstSurname.label= Primer apellido
+person.secondSurname.label= Segundo apellido
+person.nationality.label= Nacionalidad
+person.regionOfBirth.label= Lugar de nacimiento
+person.culturalUpbringing.label= Origen cultural
+
+person.project.label= Proyecto
+
+user.username.label= Nombre de usuario
+user.enabled.label= Activo
+user.passwordExpired.label= Contraseña caducada
+user.accountLocked.label= Cuenta bloqueada
+user.accountExpired.label= Cuenta caducada
