--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -72,3 +72,22 @@ user.enabled.label= Activo
 user.passwordExpired.label= Contraseña caducada
 user.accountLocked.label= Cuenta bloqueada
 user.accountExpired.label= Cuenta caducada
+
+project.label= Proyecto
+project.name.label= Nombre
+project.description.label= Descipción
+project.processes.label= Procesos
+project.persons.label= Personas
+
+documentType.label = Tipo de documento
+documentType.name.label= Nombre
+
+processType.label = Tipo de proceso
+processType.name.label= Nombre
+processType.description.label= Descipción
+
+country.label = País
+country.name.label= Nombre
+
+genre.label = Género
+genre.name.label= Nombre
