fix (processes) process table

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -91,3 +91,7 @@ country.name.label= Nombre
 
 genre.label = Género
 genre.name.label= Nombre
+
+table.actions.edit = Editar
+table.actions.show = Detalle
+table.actions.delete = Borrar
