feat (person) person list

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -64,6 +64,8 @@ person.secondSurname.label= Segundo apellido
 person.nationality.label= Nacionalidad
 person.regionOfBirth.label= Lugar de nacimiento
 person.culturalUpbringing.label= Origen cultural
+person.active = activo
+person.inactive = inactivo
 
 person.project.label= Proyecto
 
