feat (delete) allow deleting person related records

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -43,6 +43,7 @@ default.button.create.label=Create
 default.button.edit.label=Edit
 default.button.update.label=Update
 default.button.delete.label=Delete
+default.button.cancel.label=Delete
 default.button.delete.confirm.message=Are you sure?
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
@@ -97,3 +98,5 @@ genre.name.label= Nombre
 table.actions.edit = Editar
 table.actions.show = Detalle
 table.actions.delete = Borrar
+
+authorization.modal.delete.message=Estas segura de quieres borrar la autorización ?
