--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -43,7 +43,8 @@ default.button.create.label=Crear
 default.button.edit.label=Editar
 default.button.update.label=Actualizar
 default.button.delete.label=Eliminar
-default.button.delete.confirm.message=¿Está usted seguro?
+default.button.cancel.label=Cancelar
+default.button.delete.confirm.message=¿Estás seguro?
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=La propiedad {0} debe ser una URL válida
@@ -55,3 +56,5 @@ typeMismatch.java.lang.Long=La propiedad {0} debe ser un número válido
 typeMismatch.java.lang.Short=La propiedad {0} debe ser un número válido
 typeMismatch.java.math.BigDecimal=La propiedad {0} debe ser un número válido
 typeMismatch.java.math.BigInteger=La propiedad {0} debe ser un número válido
+
+authorization.modal.delete.message=Estas seguro de quieres borrar la autorización ?
