fix (i18n) get rid of hardcoded messages in controllers

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -58,6 +58,13 @@ typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
 
+# APP CUSTOM ENTRIES
+default.error.title=Error
+default.error.description=Ha ocurrido un error, ponte en contacto con el administrador
+default.error.validation.title=Error de validación
+default.error.validation.description=Por favor comprueba que has rellenado correctamente los campos obligatorios
+default.success.title=Info
+
 person.label= Persona
 person.name.label= Nombre
 person.firstSurname.label= Primer apellido
@@ -67,6 +74,7 @@ person.regionOfBirth.label= Lugar de nacimiento
 person.culturalUpbringing.label= Origen cultural
 person.active = activo
 person.inactive = inactivo
+person.delete.success.description=El registro de {0} se ha borrado correctamente
 
 person.project.label= Proyecto
 
@@ -85,6 +93,8 @@ project.persons.label= Personas
 documentType.label = Tipo de documento
 documentType.name.label= Nombre
 
+process.delete.success.description=Proceso borrado correctamente
+
 processType.label = Tipo de proceso
 processType.name.label= Nombre
 processType.description.label= Descipción
@@ -100,3 +110,6 @@ table.actions.show = Detalle
 table.actions.delete = Borrar
 
 authorization.modal.delete.message=Estas segura de quieres borrar la autorización ?
+authorization.delete.success.description=Autorización eliminada correctamente
+
+attachment.delete.success.description=Fichero eliminado correctamente
