--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -57,4 +57,58 @@ typeMismatch.java.lang.Short=La propiedad {0} debe ser un número válido
 typeMismatch.java.math.BigDecimal=La propiedad {0} debe ser un número válido
 typeMismatch.java.math.BigInteger=La propiedad {0} debe ser un número válido
 
-authorization.modal.delete.message=Estas seguro de quieres borrar la autorización ?
+# APP CUSTOM ENTRIES
+default.error.title=Error
+default.error.description=Ha ocurrido un error, ponte en contacto con el administrador
+default.error.validation.title=Error de validación
+default.error.validation.description=Por favor comprueba que has rellenado correctamente los campos obligatorios
+default.success.title=Info
+
+person.label= Persona
+person.name.label= Nombre
+person.firstSurname.label= Primer apellido
+person.secondSurname.label= Segundo apellido
+person.nationality.label= Nacionalidad
+person.regionOfBirth.label= Lugar de nacimiento
+person.culturalUpbringing.label= Origen cultural
+person.active = activo
+person.inactive = inactivo
+person.delete.success.description=El registro de {0} se ha borrado correctamente
+
+person.project.label= Proyecto
+
+user.username.label= Nombre de usuario
+user.enabled.label= Activo
+user.passwordExpired.label= Contraseña caducada
+user.accountLocked.label= Cuenta bloqueada
+user.accountExpired.label= Cuenta caducada
+
+project.label= Proyecto
+project.name.label= Nombre
+project.description.label= Descipción
+project.processes.label= Procesos
+project.persons.label= Personas
+
+documentType.label = Tipo de documento
+documentType.name.label= Nombre
+
+process.delete.success.description=Proceso borrado correctamente
+
+processType.label = Tipo de proceso
+processType.name.label= Nombre
+processType.description.label= Descipción
+
+country.label = País
+country.name.label= Nombre
+
+genre.label = Género
+genre.name.label= Nombre
+
+table.actions.edit = Editar
+table.actions.show = Detalle
+table.actions.delete = Borrar
+
+authorization.modal.delete.message=Estas segura de quieres borrar la autorización ?
+authorization.delete.success.description=Autorización eliminada correctamente
+
+attachment.delete.success.description=Fichero eliminado correctamente
