fix (user) handling new user instances

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -78,11 +78,12 @@ person.delete.success.description=El registro de {0} se ha borrado correctamente
 
 person.project.label= Proyecto
 
-user.username.label= Nombre de usuario
+user.username.label= Login
 user.enabled.label= Activo
 user.passwordExpired.label= Contraseña caducada
 user.accountLocked.label= Cuenta bloqueada
 user.accountExpired.label= Cuenta caducada
+user.delete.success.description = Borrado usuario {0}
 
 project.label= Proyecto
 project.name.label= Nombre
