feat(varios): busqueda, bajas Fix #7 #8 #12

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -90,6 +90,10 @@ project.name.label= Nombre
 project.description.label= Descipción
 project.processes.label= Procesos
 project.persons.label= Personas
+person.age.show = age {0}
+person.disable.disclaimer = Why are you disabling this person's records ?
+person.disable.success.description = {0} is now inactive
+person.enable.success.description = {0} is now active
 
 documentType.label = Tipo de documento
 documentType.name.label= Nombre
@@ -117,3 +121,5 @@ attachment.delete.success.description=Fichero eliminado correctamente
 
 cameFrom.label=Via de acceso
 cameFrom.name.label=Nombre
+
+modal.generic.areyousure = Estas seguro/a ?
