--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -74,8 +74,11 @@ person.culturalUpbringing.label= Origen cultural
 person.active = activo
 person.inactive = inactivo
 person.delete.success.description=El registro de {0} se ha borrado correctamente
-
+person.age.show = edad {0}
 person.project.label= Proyecto
+person.disable.disclaimer = Cual es el motivo de la baja ?
+person.disable.success.description = {0} esta ahora inactivo
+person.enable.success.description = {0} esta ahora activo
 
 user.username.label= Login
 user.enabled.label= Activo
@@ -116,3 +119,5 @@ attachment.delete.success.description=Fichero eliminado correctamente
 
 cameFrom.label=Via de acceso
 cameFrom.name.label=Nombre
+
+modal.generic.areyousure = Estas seguro/a ?
