--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -43,7 +43,7 @@ default.button.create.label=Create
 default.button.edit.label=Edit
 default.button.update.label=Update
 default.button.delete.label=Delete
-default.button.cancel.label=Delete
+default.button.cancel.label=Cancel
 default.button.delete.confirm.message=Are you sure?
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
