feat(alertas): agregar alertas asociadas a una persona

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -123,3 +123,7 @@ cameFrom.label=Via de acceso
 cameFrom.name.label=Nombre
 
 modal.generic.areyousure = Estas seguro/a ?
+
+note.severity.NOTE=Nota
+note.severity.WARNING=Precaución
+note.severity.DANGER=Requiere acción inmediata
