feat(alertas): fixes #22 alertas por persona

--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -125,3 +125,7 @@ modal.generic.areyousure = Estas seguro/a ?
 note.severity.NOTE=Nota
 note.severity.WARNING=Precaución
 note.severity.DANGER=Requiere acción inmediata
+note.severity.RESOLVED_TOO=Todas (incluye resueltas)
+note.resolution.disclaimer=Introduzca un comentario sobre la resolución de la alerta
+note.resolution.success.description=La alerta se ha resuelto con éxito
+note.resolution.missing.resolution=Se necesita una razón para resolver la alerta
