--- a/modules/app/grails-app/i18n/messages.properties
+++ b/modules/app/grails-app/i18n/messages.properties
@@ -90,10 +90,23 @@ project.name.label= Nombre
 project.description.label= Descipción
 project.processes.label= Procesos
 project.persons.label= Personas
+
+deactivationRequestEntity.label = Deactivation Request
+deactivationRequestEntity.motivation = Motivation
+deactivationRequestEntity.requestedBy = Requested By
+deactivationRequestEntity.approvedBy = Approved By
+
 person.age.show = age {0}
 person.disable.disclaimer = Why are you disabling this person's records ?
 person.disable.success.description = {0} is now inactive
 person.enable.success.description = {0} is now active
+person.deactivate.requested.description = Deactivation requested successfully
+person.deactivate.approved.description = Deactivation approved successfully
+person.deactivate.request.disclaimer = Why are you requesting to deactivate this person's records ?
+person.deactivate.approval.disclaimer = Why are you approving to deactivate this person's records ?
+person.deactivate.already_requested = Deactivation has been already requested 
+person.deactivate.user_not_admin = Approval user is not an admin
+person.deactivate.error.general = Check motivation deactivation has been fullfilled
 
 documentType.label = Tipo de documento
 documentType.name.label= Nombre
