--- a/modules/app/grails-app/i18n/messages_es.properties
+++ b/modules/app/grails-app/i18n/messages_es.properties
@@ -76,9 +76,17 @@ person.inactive = inactivo
 person.delete.success.description=El registro de {0} se ha borrado correctamente
 person.age.show = edad {0}
 person.project.label= Proyecto
+
 person.disable.disclaimer = Cual es el motivo de la baja ?
 person.disable.success.description = {0} esta ahora inactivo
 person.enable.success.description = {0} esta ahora activo
+person.deactivate.requested.description = Baja solicitada con exito
+person.deactivate.request.disclaimer = Cual es el motivo de solicitar la baja ?
+person.deactivate.approval.disclaimer = Cual es el motivo de aceptar la baja ?
+person.deactivate.approved.description = Baja aprobada con exito
+person.deactivate.already_requested = La baja ha sido solicitada previamente 
+person.deactivate.user_not_admin = La baja debe ser aprobada por un administrador
+person.deactivate.error.general = Comprueba que has rellenado el motivo de la baja
 
 user.username.label= Login
 user.enabled.label= Activo
@@ -92,6 +100,11 @@ project.name.label= Nombre
 project.description.label= Descipción
 project.processes.label= Procesos
 project.persons.label= Personas
+
+deactivationRequestEntity.label = Solicitud de baja
+deactivationRequestEntity.motivation = Motivacion
+deactivationRequestEntity.requestedBy = Solicitado por
+deactivationRequestEntity.approvedBy = Aprobado por
 
 documentType.label = Tipo de documento
 documentType.name.label= Nombre
